L7LB/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: nginx_service
                      domains: ["nginx.local"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_nginx
                    - name: service_httpd
                      domains: ["httpd.local"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_httpd
  clusters:
    - name: service_nginx
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_nginx
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nginx1
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: nginx2
                      port_value: 80
    - name: service_httpd
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_nginx
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpd1
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: httpd2
                      port_value: 80
